MDEV-4066 semisync_master + temporary tables causes memory leaks

close (and auto-drop) temporary tables before
rolling back the last transaction in the connection.